<resources>
    <string name="app_name">Readdit</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_library">Library</string>
    <string name="title_thoughts">Thoughts</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_navigation_bar">Navigation_bar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_caption">
        <font color="#F8F6E7">An </font>
        <font color="#F3C788">all-you-can-read </font>
        <font color="#F8F6E7">buffet </font>
    </string>
    <string name="intro_sign_in_button">I already have an account</string>
    <string name="intro_sign_up_button">I\'m new here</string>
    <string name="sign_in_heading_text">Welcome Back to Readdit</string>
    <string name="sign_in_caption">Continue your reading with us.</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="pw_hint_sign_in">Enter your password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_in_footer">New to Readdit?</string>
    <string name="intro_girl_reading_book_illustration">girl reading book illustration</string>
    <string name="readdit_logo">readdit logo</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_heading_text">Get Started with Readdit</string>
    <string name="sign_up_caption">Let\'s set up your account.</string>
    <string name="sign_up_email_hint">eg. example@gmail.com</string>
    <string name="sign_up_pw_hint">Must contain at least 8 characters</string>
    <string name="sign_up_footer">Already have an account?</string>
    <string name="onboarding_heading_1">Unlimited Reading</string>
    <string name="blob_background_cd">blob background</string>
    <string name="article_screen_cd">article screen</string>
    <string name="onboarding_caption_1">Diverse articles of interesting topics \n for your daily mental nutrition.</string>
    <string name="next_button_label">Next</string>
    <string name="library_screen_cd">library screen</string>
    <string name="onboarding_heading_2">Personal Library</string>
    <string name="onboarding_caption_2">Continue where you left off \n for your favourite articles.</string>
    <string name="note_sample_screen_cd">note screen</string>
    <string name="onboarding_heading_3">Record Ideas</string>
    <string name="onboarding_caption_3">Note down your reflection, thoughts, \n ideas, feelings... anything.</string>
    <string name="get_started_button_label">Get Started</string>
    <string name="readdit_logo_text">Read<font color="#F8F6E7">dit.</font>
    </string>
    <string name="splash_screen_logo">R</string>
    <string name="settings_header">Settings</string>
    <string name="arrow_right_icon_cd">arrow right icon</string>
    <string name="edit_profile_button_label">Edit Profile</string>
    <string name="user_icon_cd">user icon</string>
    <string name="notification_button_label">Notification</string>
    <string name="about_button_label">About</string>
    <string name="log_out_button_label">Log Out</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="thanks_support">Thanks for your support!:)</string>
    <string name="source_code">Source code available on <a href="https://github.com/shuqi-fong/Readdit">GitHub</a></string>
    <string name="developers">Developed by \n Fong Shu Qi \n Seah Shin Chong \n Tan Jia He \n Tan Zi Hao</string>
    <string name="about_header">About</string>
    <string name="notification_header">Notification</string>
    <string name="skip_button_label">Skip</string>
    <string name="account_label">Account</string>
    <string name="notification_label">Notification</string>
    <string name="about_label">About</string>
    <string name="log_out_label">Log Out</string>
    <string name="profile_photo_label">Profile Photo</string>
    <string name="username_label">Username</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="username_df">Username</string>
    <string name="email_df">Email Address</string>
    <string name="password_df">Password</string>
    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="username_hint">Enter your username</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="send_label">Send</string>
    <string name="back_to_sign_in"><![CDATA[< Back To Sign In]]></string>
    <string name="forgot_pw_caption">Enter your email to receive a \nreset password link.</string>
    <string name="account_header">Account</string>
    <string name="title_notes">Notes</string>
    <string name="search_notes_hint">Search Notes</string>
</resources>