<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="30dp"
    tools:context=".ui.signin.ForgotPasswordFragment">

    <!-- Header & Caption -->

    <TextView
        android:id="@+id/forgot_pw_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/hoboken_medium"
        android:text="@string/forgot_password_header"
        android:textColor="@color/peach"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/forgot_pw_caption"
        android:textColor="@color/beige"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pw_header" />

    <!-- Email -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/email_label"
        android:textColor="@color/beige"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_caption" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_pw_email_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/beige"
        android:textColorHint="@color/beige"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_pw_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/sign_up_email_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="0dp"
            android:textColor="@color/beige"
            android:textColorHint="@color/beige"
            android:textSize="14sp"
            app:backgroundTint="@color/beige" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Send -->
    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button_beige"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/send_label"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pw_email_til" />

    <!-- Back To Login -->
    <TextView
        android:id="@+id/open_mail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Open Mailbox >"
        android:textColor="@color/beige"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/back_to_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/back_to_sign_in"
        android:textColor="@color/peach"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>